[package]
name = "NetListening-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# tokio = { version = "1.15.0", features = ["net"] } # async programming is quite annying and many features are still missing so we leave this for now
parking_lot = "0.11.2"
ordered-varint = "0.1.0-dev.1"
# socket2 = "0.4.2" # we might use this to support UDS sockets
arc-swap = "1.5.0"
dashmap = "5.0.0"
byteorder = "1.4.3"
# async-trait = "0.1.52" # we might use this to support both UDS and TCP connections